--- a/files/style/bbcodes.css
+++ b/files/style/bbcodes.css
@@ -1,14 +1,64 @@
-.codeBox .codeLineNumbers {
+/**
+ * BBCode Styles  
+ *
+ * @author		Harald Szekely 
+ * @copyright	2011 WoltLab GmbH 
+ */
+
+/* ############## Code Box ############## */
+
+.codeBox {
+	display: block;
+}
+
+.codeBox hgroup {
+	padding: 0 7px;
+}
+
+.codeBox > div {
+	font-size: 140%;
+	line-height: 1.3;
+	display: block;
+	overflow-x: auto;
+}
+
+.codeBox td {
 	padding: 0;
-	width: 24px;
+}
+
+.codeBox td.codeLineNumbers {
 	text-align: right;
+	background-color: #e7f2fd;
+	padding: 0 4px;
+	width: 0%;
 }
-.codeBox .codeLineNumbers  a {
-	width: 24px;
-	padding: 0 2px;
-	display: inline-block;
+
+.codeBox td.codeLineNumbers a {
 	text-decoration: none;
+	color: rgba(102, 102, 102, 1);
+	margin-left: -5px;
+	padding: 0 5px;
+	display: inline-block;
+	width: 100%;
 }
-.codeBox .codeLineNumbers a:target {
-	background-color: yellow;
+
+.codeBox td.codeLineNumbers a:hover {
+	color: rgba(51, 51, 51, 1);
+	background-color: rgba(0, 0, 0, .05);
 }
+
+.codeBox td.codeLineNumbers a:target {
+	color: rgba(0, 0, 0, 1);
+	background-color: #ff3;
+}
+
+.codeBox td.codeLines {
+	background-color: rgba(255, 255, 255, 1);
+	width: 100%;
+}
+
+.codeBox td.codeLines pre {
+	padding: 0 5px;
+}
+
+/* EOF */
