--- a/files/style/bbcodes.css
+++ b/files/style/bbcodes.css
@@ -7,34 +7,33 @@
 
 /* ############## Code Box ############## */
 
-.codeBox {
+.wcf-codeBox {
 	display: block;
 }
 
-.codeBox hgroup {
+.wcf-codeBox hgroup {
 	padding: 0 7px;
 }
 
-.codeBox > div {
+.wcf-codeBox > div {
 	font-size: 140%;
 	line-height: 1.3;
 	display: block;
 	overflow-x: auto;
 }
 
-.codeBox td {
+.wcf-codeBox td {
 	padding: 0;
 }
 
-.codeBox td.codeLineNumbers {
+.wcf-codeLineNumbers {
 	text-align: right;
 	background-color: #e7f2fd;
 	padding: 0 4px;
 	width: 0%;
 }
 
-.codeBox td.codeLineNumbers a {
-	text-decoration: none;
+.wcf-codeBox td	text-decoration: none;
 	color: rgba(102, 102, 102, 1);
 	margin-left: -5px;
 	padding: 0 5px;
@@ -42,22 +41,22 @@
 	width: 100%;
 }
 
-.codeBox td.codeLineNumbers a:hover {
+.wcf-codeLineNumbers a:hover {
 	color: rgba(51, 51, 51, 1);
 	background-color: rgba(0, 0, 0, .05);
 }
 
-.codeBox td.codeLineNumbers a:target {
+.wcf-codeLineNumbers a:target {
 	color: rgba(0, 0, 0, 1);
 	background-color: #ff3;
 }
 
-.codeBox td.codeLines {
+.wcf-codeLines {
 	background-color: rgba(255, 255, 255, 1);
 	width: 100%;
 }
 
-.codeBox td.codeLines pre {
+.wcf-codeLines pre {
 	padding: 0 5px;
 }
 
@@ -67,89 +66,89 @@
 
 /* Code Box */
 
-.codeBox .quotes {
+.wcf-codeBox .quotes {
 	color: red;
 }
 
-.codeBox .comments,
-.codeBox .operators {
+.wcf-codeBox .comments,
+.wcf-codeBox .operators {
 	color: green;
 }
 
-.codeBox .keywords1 {
+.wcf-codeBox .keywords1 {
 	color: blue;
 }
 
-.codeBox .keywords2 {
+.wcf-codeBox .keywords2 {
 	color: darkred;
 }
 
-.codeBox .keywords3 {
+.wcf-codeBox .keywords3 {
 	color: darkviolet;
 }
 
-.codeBox .keywords4 {
+.wcf-codeBox .keywords4 {
 	color: darkgoldenrod;
 }
 
-.codeBox .keywords5 {
+.wcf-codeBox .keywords5 {
 	color: crimson;
 }
 
-.codeBox .numbers {
+.wcf-codeBox .numbers {
 	color: darkorange;
 }
 
 /* Code Highlighters */
 
-.diffHighlighter .comments {
+.wcf-diffHighlighter .comments {
 	color: darkviolet;
 }
 
-.diffHighlighter .remove {
+.wcf-diffHighlighter .remove {
 	color: red;
 }
 
-.diffHighlighter .add,
-.phpHighlighter .keywords2 {
+.wcf-diffHighlighter .add,
+.wcf-phpHighlighter .keywords2 {
 	color: green;
 }
 
-.phpHighlighter .comments {
+.wcf-phpHighlighter .comments {
 	color: darkgoldenrod;
 }
 
-.cssHighlighter .comments {
+.wcf-cssHighlighter .comments {
 	color: #236E26;
 }
 
-.cssHighlighter .colors {
+.wcf-cssHighlighter .colors {
 	color: #751116;
 }
 
-.cssHighlighter .numbers,
-.sqlHighlighter .numbers {
+.wcf-cssHighlighter .numbers,
+.wcf-sqlHighlighter .numbers {
 	color: #1906FD;
 }
 
-.cssHighlighter .keywords1 {
+.wcf-cssHighlighter .keywords1 {
 	color: #87154F;
 }
 
-.cssHighlighter .keywords2 {
+.wcf-cssHighlighter .keywords2 {
 	color: #994509;
 }
 
-.cssHighlighter .keywords3,
-.cssHighlighter .keywords4 {
+.wcf-cssHighlighter .keywords3,
+.wcf-cssHighlighter .keywords4 {
 	color: inherit;
 }
 
-.sqlHighlighter .keywords1 {
+.wcf-sqlHighlighter .keywords1 {
 	color: #663821;
 }
 
-.sqlHighlighter .keywords2 {
+.wcf-sqlHighlighter .keywords2 {
 	color: #871550;
 }
 
