--- a/files/style/bbcodes.css
+++ b/files/style/bbcodes.css
@@ -22,42 +22,40 @@
 	overflow-x: auto;
 }
 
-.wcf-codeBox td {
-	padding: 0;
-}
-
-.wcf-codeLineNumbers {
+.wcf-codeBox .wcf-codeLineNumbers {
 	text-align: right;
 	background-color: #e7f2fd;
 	padding: 0 4px;
 	width: 0%;
 }
 
-.wcf-codeBox td.codeLineNumbers a {
-	text-decoration: none;
-	color: rgba(102, 102, 102, 1);
-	margin-left: -5px;
-	padding: 0 5px;
-	display: inline-block;
-	width: 100%;
+.wcf-codeBox .wcf-codeLineNumbers pre {
+	white-space: normal;
 }
 
-.wcf-codeLineNumbers a:hover {
+.wcf-codeBox .wcf-codeLineNumbers a {
+	text-decoration: none;
+	margin: 0 -5px;
+	padding: 0 5px;
+	display: block;
+}
+
+.wcf-codeBox .wcf-codeLineNumbers a:hover {
 	color: rgba(51, 51, 51, 1);
 	background-color: rgba(0, 0, 0, .05);
 }
 
-.wcf-codeLineNumbers a:target {
+.wcf-codeBox .wcf-codeLineNumbers a:target {
 	color: rgba(0, 0, 0, 1);
 	background-color: #ff3;
 }
 
-.wcf-codeLines {
+.wcf-codeBox .wcf-codeLines {
 	background-color: rgba(255, 255, 255, 1);
 	width: 100%;
 }
 
-.wcf-codeLines pre {
+.wcf-codeBox .wcf-codeLines pre {
 	padding: 0 5px;
 }
 
