Added inlinecode bbcode
Closes #33

--- a/files/style/bbcode.less
+++ b/files/style/bbcode.less
@@ -198,3 +198,14 @@
 		padding-bottom: @wcfGapSmall;
 	}
 }
+
+/* inline code tag */
+.inlineCode {
+	background-color: @wcfContentBackgroundColor;
+	border: 1px solid @wcfContainerBorderColor;
+	font-family: Consolas, "Liberation Mono", Courier, monospace;
+	margin: 0 2px;
+	padding: 1px 5px;
+	
+	.borderRadius(3px);
+}
