Added table bbcode

--- a/files/style/bbcode.less
+++ b/files/style/bbcode.less
@@ -209,3 +209,13 @@
 	
 	.borderRadius(3px);
 }
+
+/* smiley list */
+ul.smileyList > li {
+	display: inline;
+}
+
+/* bbcode table */
+.bbcodeTable {
+	display: inline-block;
+}
